# TamagotchiGame

./: CMakeLists.txt  Dockerfile  README.md
app/: CMakeLists.txt  Dockerfile  README.md
app/include/TamagotchiGame/: Pet.hpp  StatesController.hpp
app/libs/DisplayLib/: CMakeLists.txt  ComponentBuilder.hpp  Makefile  Window.hpp  a.out  cmake_install.cmake
app/libs/jsoncpp/: CMakeLists.txt  Makefile
app/src/: DatabaseConnection.cpp  FileManager.cpp  Shop.cpp  create_files.py  main.cpp
app/src/files/: pets.json  user.json
docker/: docker-compose.yml
docker/data/base/1/: 1259  2619  2696  2840  2841  pg_internal.init
docker/data/base/5/: 1249  1259  16384  16385  16389  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  3455  pg_internal.init
docker/data/global/: 1260  pg_control  pg_internal.init
docker/data/pg_stat/: pgstat.stat
docker/init-scripts/: create_db.sql
include/TamagotchiGame/: AbstractObserver.hpp  BarsComponent.hpp  Component.hpp  DatabaseConnection.hpp  FileManager.hpp  ItemComponent.hpp  Pet.hpp  PetComponent.hpp  Renderer.hpp  Shop.cpp  Shop.hpp  StatesController.hpp  Window.hpp
libs/DisplayLib/: Component.hpp  ComponentBuilder.hpp  RendererASCII.cpp  RendererASCII.hpp  Window.hpp  a.out  example.cpp  main.cpp
libs/jsoncpp/: cmake_install.cmake
src/: DatabaseConnection.cpp  FileManager.cpp  Pet.cpp  Shop.cpp  StatesController.cpp  a.out  create_files.py  main.cpp
src/files/: shop.json
